ft:added a details button to the heroes page fir display

--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -3,7 +3,7 @@
     <div class="row">
         {{#if heroes}}
             {{#each heroes}}
-
+                <a href="/heroes/{{id}}"><button class="btn btn-success">hero-info</button></a>
             {{/each}}
         {{/if}}
     </div>
