--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -11,7 +11,7 @@
     <div class="col-md-6">
         {{#if hero}}
             <div class="card text-dark">
-                <div classcard-body>
+                <div class = "card-body">
                     <h3 class="card-title">{{hero.name}}</h3>
                     <hr>
                     <p class="card-text">Age: {{hero.age}} years</p>
@@ -26,6 +26,7 @@
     </div>
 {{/partial}}
 
+{{> layout.hbs}}
 
 
 
