--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -14,7 +14,7 @@
     <li  class="active"><a href="/hero">View Heroes</a></li>
     <li  class="active"><a href="/squad">View Squads</a></li>
 </ul>
-<div class="container">
+<div class="container-fluid">
     <!--begin main template-->
 
     <div class="main-content">
