ft: refactored the index template to restructure the div

--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -5,7 +5,7 @@
         {{#if heroes}}
             {{#each heroes}}
                 <h3>{{name}}</h3>
-                <a href="/heroes/{{id}}"><button class="btn btn-success">hero-info</button></a><br><br><hr>
+                <a href="/hero/{{id}}"><button class="btn btn-success">hero-info</button></a><br><br><hr>
             {{/each}}
         {{else}}
             <p>No heroes found!</p>
