--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,9 +1,14 @@
 {{#partial "content"}}
 
-<h3 class="title">Welcome to Hero Squad </h3>
-<p>What do you like to do?</p>
-<p>Add a new Her? alright: <a href="/create/hero"><button class="btn btn-success btn-lg">Create Hero</button></a> </p>
-<p>Add a new Squad? alright:  <a href="/create/squad"><button class="btn btn-success btn-lg">Create Squad</button></a> </p>
+    <div class="row">
+        <div class="col-md-12">
+            <h3 class="title text-center pt-5">Welcome to Hero Squad </h3>
 
+            <h4>HeroSquad is an application that helps you recruit new heroes to different squads.
+                <br>you can create a squad of your own or use other squads. have fun</h4>
+            <a href="/create/hero"><button class="btn btn-success btn-lg">Create Hero</button></a>
+            <a href="/create/squad"><button class="btn btn-success btn-lg">Create Squad</button></a>
+        </div>
+    </div>
 {{/partial}}
 {{> layout.hbs}}
