ft: edited the property binders for the heroes info

--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -1,13 +1,14 @@
 {{#partial "content"}}
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12 text-center">
             <h3 class="title text-center pt-5">Welcome to Hero Squad </h3>
-
-            <h4>HeroSquad is an application that helps you recruit new heroes to different squads.
+            <h4 class="pt-5">HeroSquad is an application that helps you recruit new heroes to different squads.
                 <br>you can create a squad of your own or use other squads. have fun</h4>
-            <a href="/create/hero"><button class="btn btn-success btn-lg">Create Hero</button></a>
-            <a href="/create/squad"><button class="btn btn-success btn-lg">Create Squad</button></a>
+            <div class="pt-4">
+                <a href="/create/hero"><button class="btn btn-success btn-lg">Create Hero</button></a>
+                <a href="/create/squad"><button class="btn btn-success btn-lg">Create Squad</button></a>
+            </div>
         </div>
     </div>
 {{/partial}}
