--- a/src/main/resources/public/css/app.css
+++ b/src/main/resources/public/css/app.css
@@ -1,14 +1,20 @@
 body{
 
-    background: #0e4269 ;
+    background: #04214d;
     background-position:center;
     background-size:contain;
     color:white;
     font-family:monospace;
 }
 .mynav li a{
-padding: 5px;
+padding: 8px;
 color: white;
-text-align: center;
+justify-content: center;
 text-decoration: none;
+font-size:25px;
+}
+.hero{
+display: flex;
+flex-direction:row;
+justify-content:space-between;
 }
