--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -1,32 +1,42 @@
 {{#partial "content"}}
     <h1>My Heroes</h1><br>
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-12 hero">
         {{#if heroes}}
             {{#each heroes}}
-                <h3>{{name}}</h3>
-                <a href="/hero/{{id}}"><button class="btn btn-success">hero-info</button></a><br><br><hr>
+<!--                <h3>{{name}}</h3>-->
+                <div class="card text-dark" style="width:27rem">
+                    <div class = "card-body">
+                        <h3 class="card-title">Name: {{name}}</h3>
+                        <hr>
+                        <p class="card-text">Age: {{age}} years</p>
+                        <p class="card-text">Powers: {{powers}}</p>
+                        <p class="card-text">Weakness: {{weakness}}</p>
+                        <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>
+                    </div>
+                </div>
+<!--                <a href="/hero/{{id}}"><button class="btn btn-success">hero-info</button></a><br><br><hr>-->
             {{/each}}
         {{else}}
             <p>No heroes found!</p>
         {{/if}}
     </div>
-    <div class="col-md-6">
-        {{#if hero}}
-            <div class="card text-dark">
-                <div class = "card-body">
-                    <h3 class="card-title">{{hero.name}}</h3>
-                    <hr>
-                    <p class="card-text">Age: {{hero.age}} years</p>
-                    <p class="card-text">Powers: {{hero.powers}}</p>
-                    <p class="card-text">Weakness: {{hero.weakness}}</p>
-                    <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>
-                </div>
-            </div>
-        {{/if}}
+<!--    <div class="col-md-6">-->
+<!--        {{#if hero}}-->
+<!--            <div class="card text-dark">-->
+<!--                <div class = "card-body">-->
+<!--                    <h3 class="card-title">{{hero.name}}</h3>-->
+<!--                    <hr>-->
+<!--                    <p class="card-text">Age: {{hero.age}} years</p>-->
+<!--                    <p class="card-text">Powers: {{hero.powers}}</p>-->
+<!--                    <p class="card-text">Weakness: {{hero.weakness}}</p>-->
+<!--                    <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        {{/if}}-->
 
-    </div>
-    </div>
+<!--    </div>-->
+<!--    </div>-->
 {{/partial}}
 
 {{> layout.hbs}}
