st: styled the hero page for a padding of the cards

--- a/src/main/resources/templates/layout.hbs
+++ b/src/main/resources/templates/layout.hbs
@@ -11,8 +11,8 @@
 <!--style="background:url(/images/im2.jpeg); background-position:cover; background-repeat:no-repeat"-->
 <ul class="nav p-3 mynav text-center text-white bg-dark">
     <li  class="active"><a href="/">Home</a></li>
-    <li  class="active"><a href="/hero">View Heroes</a></li>
-    <li  class="active"><a href="/squad">View Squads</a></li>
+    <li  class="active"><a href="/hero">Heroes</a></li>
+    <li  class="active"><a href="/squad">Squads</a></li>
 </ul>
 <div class="container-fluid">
     <!--begin main template-->
