--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -5,7 +5,7 @@
         {{#if heroes}}
             {{#each heroes}}
 <!--                <h3>{{name}}</h3>-->
-                <div class="card text-dark" style="width:27rem">
+                <div class="card text-dark pt-3 pb-3" style="width:23rem; padding-bottom:3px">
                     <div class = "card-body">
                         <h3 class="card-title">Name: {{name}}</h3>
                         <hr>
