--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -1,11 +1,11 @@
 {{#partial "content"}}
-    <h1>My Heroes</h1><br>
+    <h1 class="pt-3 text-center">My Heroes</h1><br>
     <div class="row">
         <div class="col-md-12 hero">
         {{#if heroes}}
             {{#each heroes}}
 <!--                <h3>{{name}}</h3>-->
-                <div class="card text-dark pt-3 pb-3" style="width:23rem; padding-bottom:3px">
+                <div class="card text-dark pt-3 mb-3" style="width:23rem;">
                     <div class = "card-body">
                         <h3 class="card-title">Name: {{name}}</h3>
                         <hr>
