--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -12,7 +12,7 @@
                         <p class="card-text">Age: {{age}} years</p>
                         <p class="card-text">Powers: {{powers}}</p>
                         <p class="card-text">Weakness: {{weakness}}</p>
-                        <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>
+                        <a href="/heroes/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>
                     </div>
                 </div>
 <!--                <a href="/hero/{{id}}"><button class="btn btn-success">hero-info</button></a><br><br><hr>-->
