ft: added a condition occupied if the hero is occupied

--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -11,6 +11,7 @@
                                                 <p class="card-text">Age: {{age}} years</p>
                                                 <p class="card-text">Powers: {{powers}}</p>
                                                 <p class="card-text">Weakness: {{weakness}}</p>
+                                                <p class="card-text">Occupied: {{occupied}}</p>
 <!--                                                <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>-->
                                             </div>
                                         </div>
