--- a/src/main/resources/templates/index.hbs
+++ b/src/main/resources/templates/index.hbs
@@ -7,7 +7,7 @@
                 <br>you can create a squad of your own or use other squads. have fun</h4>
             <div class="pt-4">
                 <a href="/create/hero"><button class="btn btn-success btn-lg">Create Hero</button></a>
-                <a href="/squad"><button class="btn btn-success btn-lg">Create Squad</button></a>
+                <a href="/create/squad"><button class="btn btn-success btn-lg">Create Squad</button></a>
             </div>
         </div>
     </div>
