st: styling the squad form to center the items

--- a/src/main/resources/templates/form-squad.hbs
+++ b/src/main/resources/templates/form-squad.hbs
@@ -1,5 +1,5 @@
 {{#partial "content"}}
-    <form action="/squads/new" method="post">
+    <form action="/squads/new" method="post" class="pt-5 text-center p-4 heroform">
         <h4>Create a new Squad..</h4>
         <hr>
         <label for="name">Name</label> &nbsp;&nbsp; :
