--- a/src/main/resources/templates/squad-page.hbs
+++ b/src/main/resources/templates/squad-page.hbs
@@ -1,5 +1,5 @@
 {{#partial "content"}}
-    <h1 class="text-center">my Squads</h1>
+    <h1 class="text-center pt-4 pb-5">my Squads</h1>
     <div class="row">
         <div class="col-md-12">
             {{#if squads}}
