ft: restructured the squad page to have a card display

--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -12,7 +12,10 @@
                                                 <p class="card-text">Powers: {{powers}}</p>
                                                 <p class="card-text">Weakness: {{weakness}}</p>
                                                 <p class="card-text">Occupied: {{occupied}}</p>
-<!--                                                <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>-->
+
+<!--                                               {{#if hero}}-->
+<!--                                                   <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>-->
+<!--                                               {{/if}}-->
                                             </div>
                                         </div>
                             {{/each}}
