--- a/src/main/resources/templates/squad-page.hbs
+++ b/src/main/resources/templates/squad-page.hbs
@@ -6,11 +6,12 @@
                 {{#each squads}}
                     <div class="card text-dark pt-3 mb-3" style="width:23rem;">
                         <div class = "card-body">
-                            <h3 class="card-title">Name: {{name}}</h3>
+                            <h3 class="card-title">Squad name: {{name}}</h3>
                             <hr>
-                            <p class="card-text">Age: {{maxsize}} years</p>
-                            <p class="card-text">Powers: {{cause}}</p>
+                            <p class="card-text">Max size: {{maxsize}}</p>
+                            <p class="card-text">Cause: {{cause}}</p>
                         </div>
+<!--                        <a href="/squads/{{id}}"><button class="btn btn-info btn-md">Details</button></a><br><br><hr>-->
                 {{/each}}
             {{/if}}
 {{else}}
@@ -18,6 +19,12 @@
         </div>
     </div>
     </div>
+{{/partial}}
+{{#partial "footer"}}
+    {{#if squads}}
+        <a href="/squads/delete"><button class="btn btn-lg btn-danger"> Delete All Squads</button></a>
+    {{else}}
+    {{/if}}
 {{/partial}}
 
 {{>layout.hbs}}
