--- a/src/main/resources/templates/hero-page.hbs
+++ b/src/main/resources/templates/hero-page.hbs
@@ -1,26 +1,40 @@
+
 {{#partial "content"}}
     <h1 class="pt-3 text-center">My Heroes</h1><br>
-        <div class="row">
-            <div class="col-md-12 hero">
-                        {{#if heroes}}
-                            {{#each heroes}}
-                                        <div class="card text-dark pt-3 mb-3" style="width:23rem;">
-                                            <div class = "card-body">
-                                                <h3 class="card-title">Name: {{name}}</h3>
-                                                <hr>
-                                                <p class="card-text">Age: {{age}} years</p>
-                                                <p class="card-text">Powers: {{powers}}</p>
-                                                <p class="card-text">Weakness: {{weakness}}</p>
-                                                <p class="card-text">Occupied: {{occupied}}</p>
+    <div class="row">
+        <div class="col-md-12 hero">
+            {{#if heroes}}
+                {{#each heroes}}
+                    <div class="card text-dark pt-3 mb-3" style="width:23rem;">
+                        <div class = "card-body">
+                            <h3 class="card-title">Name: {{name}}</h3>
+                            <hr>
+                            <p class="card-text">Age: {{age}} years</p>
+                            <p class="card-text">Powers: {{powers}}</p>
+                            <p class="card-text">Weakness: {{weakness}}</p>
+                            <p class="card-text">Occupied: {{occupied}}</p>
+                            <a href="/heroes/{{id}}"><button class="btn btn-info btn-md">Delete</button></a><br><br><hr>
+                        </div>
+                    </div>
+                {{/each}}
 
-<!--                                               {{#if hero}}-->
-<!--                                                   <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete this hero</button></a>-->
-<!--                                               {{/if}}-->
-                                            </div>
-                                        </div>
-                            {{/each}}
             {{else}}
                 <p>No Heroes Available!</p>
+            {{/if}}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            {{#if hero}}
+                <div class="card  text-dark">
+
+                    <div class="card-body">
+                        <h4 class="card-title text-danger">Warning</h4>
+                        <hr>
+                        <p class="card-text">If you delete this hero you will not be able to recover it!</p><br>
+                        <a href="/hero/{{hero.id}}/delete"><button class="btn btn-danger">Delete Hero</button></a>
+                    </div>
+                </div>
             {{/if}}
         </div>
     </div>
@@ -42,8 +56,3 @@
 
 
 {{> layout.hbs}}
-
-
-
-
-
