--- a/src/main/resources/templates/squad-page.hbs
+++ b/src/main/resources/templates/squad-page.hbs
@@ -1,5 +1,6 @@
 {{#partial "content"}}
     <h1 class="text-center pt-4 pb-5">My Squads</h1>
+    <hr>
     <div class="row">
         <div class="col-md-12 hero">
             {{#if squads}}
@@ -19,11 +20,9 @@
                                 <p class="card-text">Weakness: {{weakness}}</p><br>
                                 <p class="card-text">Defence : {{defence}}</p><br>
                                 <p class="card-text">Attack : {{attack}}</p><br>
-
-
+                                <a href="/squads/{{id}}"><button class="btn btn-info btn-md">Delete</button></a><br><br><hr>
                             {{/each}}
                         </div>
-<!--                        <a href="/squads/{{id}}"><button class="btn btn-info btn-md">Details</button></a><br><br><hr>-->
                 {{/each}}
             {{/if}}
 {{else}}
@@ -31,6 +30,22 @@
         </div>
     </div>
     </div>
+    <div class="row">
+        <div class="col-md-12 text-center">
+            {{#if squad}}
+                <div class="card  text-dark">
+
+                    <div class="card-body">
+                        <h4 class="card-title text-danger">Warning</h4>
+                        <hr>
+                        <p class="card-text">Are you sure you want to delete {{squad.name}}, OK if you delete this hero you will not be able to recover it!</p><br>
+                        <a href="/squad/{{squad.id}}/delete"><button class="btn btn-danger">Delete Squad</button></a>
+                    </div>
+                </div>
+            {{/if}}
+        </div>
+    </div>
+
 {{/partial}}
 {{#partial "footer"}}
     {{#if squads}}
